--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -102,7 +102,7 @@ body {
 
 
 
-.loading-circle {
+#loading-circle {
     border: 4px solid #f3f3f3; /* Light grey */
     border-top: 4px solid white; /* Blue */
     border-radius: 50%;
