--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -103,13 +103,15 @@ body {
 
 
 #loading-circle {
+    position: absolute;
     border: 4px solid #f3f3f3; /* Light grey */
     border-top: 4px solid white; /* Blue */
     border-radius: 50%;
     width: 30px;
     height: 30px;
     animation: spin 2s linear infinite; /* Spin animation */
-    margin: auto auto; /* Center horizontally */
+    /*margin: auto auto; /* Center horizontally */
+    margin-left: -30px;
 }
 
 @keyframes spin {
