--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -101,6 +101,7 @@ body {
    font-family: "Varela", sans-serif;
    font-size: 12px;
    padding:10px;
+   padding-bottom: 40px;
 }
 
 #fft-table td {
@@ -123,8 +124,8 @@ body {
     width: 20px;
     height: 20px;
     animation: spin 2s linear infinite; /* Spin animation */
-    /*margin: auto auto; /* Center horizontally */
-    margin-left: -30px;
+    left: 50%;
+    bottom: 20px;
 }
 
 @keyframes spin {
