--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -118,8 +118,8 @@ body {
 
 #loading-circle {
     position: absolute;
-    border: 4px solid #f3f3f3; /* Light grey */
-    border-top: 4px solid white; /* Blue */
+    border: 4px solid #333333;
+    border-top: 4px solid #eeeeee; 
     border-radius: 50%;
     width: 20px;
     height: 20px;
