--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -123,12 +123,28 @@ body {
     border-radius: 50%;
     width: 20px;
     height: 20px;
-    animation: spin 2s linear infinite; /* Spin animation */
+    animation: spin 1s linear infinite; /* Spin animation */
     left: 50%;
-    bottom: 20px;
+    bottom: 0px;
 }
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+
+.fade-up {
+  animation: fadeUp 0.5s ease-out forwards;
+}
+
+@keyframes fadeUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
