--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -84,6 +84,7 @@ body {
   position: relative;
   top: 200px;
   border-radius: 5px;
+  border: 1px solid black;
   text-align: center;
   width: 100%;
   height: 300px;
@@ -125,7 +126,7 @@ body {
     height: 20px;
     animation: spin 1s linear infinite; /* Spin animation */
     left: 50%;
-    bottom: 0px;
+    bottom: 5px;
 }
 
 @keyframes spin {
