--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -155,6 +155,15 @@ body {
     left: 50%;
     bottom: 2px;
     font-size: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#reload {
+    position: absolute;
+    left: 50%;
+    bottom: 8px;
 }
 
 #loading {
