--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -95,6 +95,8 @@ body {
   background-color: rgba(250,250,250,0.6);
   display: flex;
   justify-content: center;
+  border-bottom: 10px solid black;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 #fft-table {
@@ -219,7 +221,7 @@ button {
    background-color: white;
    color: black;
    border: 1px solid black;
-   border-radius: 50%;
+   border-radius: 10px;
 }
 
 button:hover {
@@ -232,7 +234,7 @@ select {
    background-color: white;
    color: black;
    border: 1px solid black;
-   border-radius: 50%;
+   border-radius: 10px;
 }
 
 #numOpsSelect{
