--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -90,13 +90,23 @@ body {
   height: 300px;
   background-color: white;
   box-sizing: border-box;
-  box-sizing: border-box;
   display: block;
   background-color: rgba(250,250,250,0.6);
   display: flex;
   justify-content: center;
   border-bottom: 10px solid black;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+
+#stats_tab {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  display: block;
+  background-color: rgba(10,10,10,0.2);
+  display: flex;
+  justify-content: center;
 }
 
 #fft-table {
