--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -98,13 +98,23 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
+#stats_head {
+  text-align: center;
+  width: 100%;
+  height: 30px;
+  box-sizing: border-box;
+  display: block;
+  background-color: rgba(10,10,10,0.1);
+  display: flex;
+  justify-content: center;
+}
+
 #stats_tab {
   text-align: center;
   width: 100%;
   height: 100%;
   box-sizing: border-box;
   display: block;
-  background-color: rgba(10,10,10,0.2);
   display: flex;
   justify-content: center;
 }
@@ -126,6 +136,11 @@ body {
 
 #tr_header > td {
    background-color: transparent;
+}
+
+#fft-table th {
+  height: 10px;
+  color: rgba(10, 10, 10, 0.5);
 }
 
 
