--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -92,7 +92,7 @@ body {
   box-sizing: border-box;
   display: block;
   background-color: rgba(250,250,250,0.6);
-  display: flex;
+  /*! display: flex; */
   justify-content: center;
   border-bottom: 10px solid black;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
@@ -101,11 +101,20 @@ body {
 #stats_head {
   text-align: center;
   width: 100%;
-  height: 30px;
+  height: 40px;
   box-sizing: border-box;
   display: block;
-  background-color: rgba(10,10,10,0.1);
-  display: flex;
+  background-color: rgba(200,0,0,0.2);
+  justify-content: center;
+}
+
+#stats_footer {
+  text-align: center;
+  width: 100%;
+  height: 100px;
+  box-sizing: border-box;
+  display: block;
+  background-color: rgba(200,0,0,0.2);
   justify-content: center;
 }
 
