--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -71,7 +71,7 @@ body {
 #descr_div {
   position: absolute;
   font-family: "Sue Ellen Francisco", cursive !important;
-  top: 550px;
+  top: 600px;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
@@ -87,15 +87,16 @@ body {
   border: 1px solid black;
   text-align: center;
   width: 100%;
-  height: 300px;
+  height: 350px;
   background-color: white;
   box-sizing: border-box;
-  display: block;
+  display: flex;
+  flex-direction: column;
   background-color: rgba(250,250,250,0.6);
-  /*! display: flex; */
   justify-content: center;
   border-bottom: 10px solid black;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  padding: 0px;
 }
 
 #stats_head {
@@ -111,11 +112,12 @@ body {
 #stats_footer {
   text-align: center;
   width: 100%;
-  height: 20px;
+  height: 40px;
   box-sizing: border-box;
   display: block;
   background-color: rgba(200,0,0,0.2);
-  justify-content: center;
+  margin: 0px;
+  /*! position: absolute; */
 }
 
 #stats_tab {
@@ -126,6 +128,8 @@ body {
   display: block;
   display: flex;
   justify-content: center;
+  /*! position: absolute; */
+  flex: 1;
 }
 
 #fft-table {
@@ -133,7 +137,8 @@ body {
    font-family: "Varela", sans-serif;
    font-size: 12px;
    padding:10px;
-   padding-bottom: 40px;
+   border: 1px solid aliceblue;
+   padding-top: 4px;
 }
 
 #fft-table td {
@@ -319,7 +324,7 @@ select {
     align-items: center; /* Align icons vertically in the center */
     position: absolute;
     top: 10px;
-    right: 50px;
+    right: 30px;
 }
 
 .icon-link {
