--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -120,7 +120,7 @@ body {
   /*! position: absolute; */
 }
 
-#stats_tab {
+.tab {
   text-align: center;
   width: 100%;
   height: 100%;
@@ -157,11 +157,9 @@ body {
   color: rgba(10, 10, 10, 0.5);
 }
 
-
 #tab_chart{
   background-color: black;
 }
-
 
 #loading-circle {
     position: absolute;
