--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -132,7 +132,7 @@ body {
 
 .icon-link{ cursor: pointer; }
 .icon-image{ fill: red; }
-.icon-image:hover{ box-shadow: 0 0 3px rgba(255, 0, 0, 0.7); }
+.icon-image:hover{ filter: drop-shadow(0px 0px 2px rgba(255, 0, 0, 0.7)); }
 
 #fft-table {
    width: 100%;
