--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -130,8 +130,8 @@ body {
   flex: 1;
 }
 
-.icon-link{ cursor: pointer; }
-.icon-link:hover{ filter: drop-shadow(0px 0px 1px white); }
+.icon-link{ cursor: pointer; filter: invert(30%) sepia(50%); }
+.icon-link:hover{ filter: invert(70%) sepia(60%) hue-rotate(300deg) drop-shadow(0px 0px 1px black); }
 
 #fft-table {
    width: 100%;
