--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -130,8 +130,17 @@ body {
   flex: 1;
 }
 
-.icon-link{ cursor: pointer; filter: invert(30%) sepia(50%); }
-.icon-link:hover{ filter: invert(70%) sepia(60%) hue-rotate(300deg) drop-shadow(0px 0px 1px black); }
+.icon-link{ 
+   cursor: pointer; 
+   filter: invert(30%) sepia(50%); 
+   margin: 0 10px;
+}
+.icon-link:hover{ 
+  filter: invert(70%) sepia(60%) hue-rotate(300deg) drop-shadow(0px 0px 1px black); 
+}
+.active-icon{
+   border-bottom: 2px solid black;
+}
 
 #fft-table {
    width: 100%;
@@ -316,8 +325,6 @@ select {
 }
 
 
-
-
 #icon-row {
     display: flex;
     justify-content: space-between;
@@ -327,7 +334,5 @@ select {
     right: 30px;
 }
 
-.icon-link {
-    margin: 0 10px;
-}
+
 
