--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -133,7 +133,9 @@ body {
 .icon-link{ 
    cursor: pointer; 
    filter: invert(30%) sepia(50%); 
-   margin: 0 10px;
+   margin: 0 5px;
+   box-sizing:border-box;
+   height: 26px
 }
 .icon-link:hover{ 
   filter: invert(70%) sepia(60%) hue-rotate(300deg) drop-shadow(0px 0px 1px black); 
