--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -169,9 +169,15 @@ body {
   color: rgba(10, 10, 10, 0.5);
 }
 
-
-#performanceChart{
+#tab_chart {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    grid-auto-rows: minmax(200px, auto);
+    gap: 5px;
+}
+.performanceChart{
    width: 100%;
+   height: 100%;
    font-family: "Varela", sans-serif;
    font-size: 12px;
    padding:10px;
