--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -170,15 +170,19 @@ body {
 }
 
 #tab_chart {
+   /*
    display: grid;
    gap: 5px;
-   grid-template-columns: repeat(2, minmax(0, 1fr)); /* 2 columns with equal width */
-   grid-template-rows: repeat(2, minmax(0, 1fr)); /* 2 rows with equal height */
+   grid-template-columns: repeat(2, minmax(0, 1fr));
+   grid-template-rows: repeat(2, minmax(0, 1fr));
+   */
+   overflow-y: scroll;
 }
 
 .chart_panel {
+   display: block;
    width: 100%;
-   height: 100%;
+   /*height: 100%;*/
 }
 
 .performanceChart{
