--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -170,19 +170,16 @@ body {
 }
 
 #tab_chart {
-   /*
-   display: grid;
-   gap: 5px;
-   grid-template-columns: repeat(2, minmax(0, 1fr));
-   grid-template-rows: repeat(2, minmax(0, 1fr));
-   */
+   display: flex;   
    overflow-y: scroll;
+   flex-direction: column;
+   align-items: center;
 }
 
 .chart_panel {
    display: block;
    width: 100%;
-   /*height: 100%;*/
+   height: 100%;
 }
 
 .performanceChart{
@@ -361,6 +358,3 @@ select {
     top: 10px;
     right: 30px;
 }
-
-
-
