--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -179,14 +179,14 @@ body {
 .chart_panel {
    display: block;
    width: 100%;
-   height: 300px;
+   height: 400px;
 }
 
 .performanceChart{
-   font-family: "Varela", sans-serif;
+   /*font-family: "Varela", sans-serif;
    font-size: 12px;
    padding:10px;
-   padding-top: 4px;
+   padding-top: 4px;*/
 }
 
 
