--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -177,9 +177,10 @@ body {
 }
 
 .chart_panel {
+   position: absolute;
    display: block;
    width: 100%;
-   height: 400px;
+   height: 100%;
 }
 
 .performanceChart{
