--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -224,6 +224,21 @@ body {
   }
 }
 
+
+.fade-in {
+  animation: fadeIn 0.4s ease-out forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+
 #loading_info {
     position: absolute;
     left: 50%;
