--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -226,7 +226,7 @@ body {
 
 
 .fade-in {
-  animation: fadeIn 0.4s ease-out forwards;
+  animation: fadeIn 2.0s ease-out forwards;
 }
 
 @keyframes fadeIn {
@@ -311,6 +311,7 @@ button {
    border-radius: 10px;
    z-index: 10;
    cursor: pointer;
+   mix-blend-mode: overlay;
 }
 
 button:hover {
