--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -169,12 +169,14 @@ body {
   color: rgba(10, 10, 10, 0.5);
 }
 
+/*
 #tab_chart {
    display: flex;   
    overflow-y: scroll;
    flex-direction: column;
    align-items: center;
 }
+*/
 
 .chart_panel {
    position: absolute;
