--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -391,3 +391,25 @@ select {
     top: 10px;
     right: 30px;
 }
+
+
+#outputs{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.output-row {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+label {
+    margin-right: 10px;
+}
+
+.float-input {
+    width: 100px;
+}
