--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -398,6 +398,8 @@ select {
     flex-direction: column;
     align-items: center;
     margin-top: 50px;
+    border-radius: 10px;
+    border: 1px solid rgba(10,10,10,0.5);
 }
 
 .output-row {
@@ -407,9 +409,10 @@ select {
 }
 
 label {
-    margin-right: 10px;
+    margin-right: 5px;
+    width: 100px;
 }
 
 .float-input {
-    width: 100px;
+    width: 200px;
 }
