--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -392,14 +392,20 @@ select {
     right: 30px;
 }
 
+#tab_micro{
+  background-color: rgba(0,0,0,0.8);
+}
 
 #outputs{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 10px;
     border-radius: 10px;
-    border: 1px solid rgba(10,10,10,0.5);
+    border: 1px solid rgba(200,200,200,0.5);
+    padding: 10px;
+    height: fit-content;
+    background-color: rgba(100,100,100,0.8);
 }
 
 .output-row {
@@ -409,10 +415,28 @@ select {
 }
 
 label {
+    color: white;
     margin-right: 5px;
     width: 100px;
+    text-align: left;
 }
 
 .float-input {
     width: 200px;
+    border-radius: 10px
+}
+
+
+.slider-container {
+    width: 300px;
+    margin: 50px auto;
+}
+
+.slider {
+    width: 100%;
+}
+
+.slider-value {
+    margin-top: 10px;
+    text-align: center;
 }
