--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -430,7 +430,7 @@ label {
 
 .float-input {
     width: 300px;
-    border-radius: 10px
+    border-radius: 10px;
     font-family: monospace;
     text-emphasis: bold;
 }
