--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -88,7 +88,7 @@ body {
   text-align: center;
   width: 100%;
   height: 350px;
-  background-color: white;
+  min-width: fit-content;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -412,31 +412,32 @@ select {
     padding: 10px;
     height: fit-content;
     background-color: rgba(100,100,100,0.8);
-    width: 600px;
+    width: 60%;
 }
 
 .output-row {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+    width: 100%;
 }
 
 label {
     color: white;
     margin-right: 5px;
-    width: 100px;
+    min-width: 90px;
     text-align: left;
 }
 
 .float-input {
-    width: 250px;
+    width: 100%;
     border-radius: 10px;
     font-family: monospace;
     text-emphasis: bold;
 }
 
 .slider-container {
-    width: 900px;
+    width: 60%;
     height: 25px;
     justify-content: center;
     display: flex;
