--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -159,6 +159,10 @@ body {
   background-color: white;
 }
 
+.dev{
+  cursor: pointer;
+}
+
 #tr_header > td {
    background-color: transparent;
 }
