--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -25,7 +25,8 @@ body {
   position: absolute;
   padding: 0px;
   margin: 0px;
-  overflow: hidden;
+  overflow-y: scroll;
+  background-color: #FDDDE6;
 }
 
 #root {
@@ -459,5 +460,15 @@ label {
 
 
 section{
-    border-bottom: solid 1px rgba(0,0,0,0.3);
+    border-bottom: solid 1px rgba(100, 10, 10, 0.3);
+    height: 700px;
+    margin: 0px;
+    padding: 0px;
 }
+
+#section_usage{
+    padding-top: 20px;
+    background-color: #C89B;
+}
+
+
