--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -461,9 +461,14 @@ label {
 
 section{
     border-bottom: solid 1px rgba(100, 10, 10, 0.3);
-    height: 700px;
     margin: 0px;
     padding: 0px;
+
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 0.5s ease; /* Smooth background color transition */
 }
 
 #section_usage{
@@ -475,5 +480,6 @@ section{
     font-style: normal;
     font-size: 50px;
 }
+
 
 
