--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -32,8 +32,8 @@ body {
 #root {
   display: block;
   width: 100%;
-  height: 100%;
-  background-color: #FDDDE6;
+  height: 90%;
+  /*! background-color: #FDDDE6; */
   padding: 20px;
   position: absolute;
   box-sizing: border-box;
@@ -494,10 +494,15 @@ section{
 
 #anchors{
   width: 100%;
+  text-align: center;
+  height: 40px;
 }
 
-a{
+.anchor {
   text-decoration: none;
   color: rgba(200,50,50,0.5);
-  text-emphasis: bold;
+  text-emphasis: none;
+  border: solid 1px;
+  border-radius: 10px;
+  padding: 4px;
 }
