--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -355,12 +355,17 @@ select {
 }
 
 #paramsDiv{
-   width: 100px;
+   width: 200px;
    position: absolute;
    right: 20px;
    bottom: 5px;
-   display: flex;
-   flex-direction: row;
+   display: grid;
+   grid-template-columns: auto auto;
+   grid-template-rows: auto auto;
+}
+
+#paramsDiv label{
+  font-size: 10px;
 }
 
 #numOpsSelect{
