--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -359,16 +359,21 @@ select {
    position: absolute;
    left: 20px;
    bottom: 5px;
-   display: grid;
-   grid-template-columns: auto auto;
-   grid-template-rows: auto auto;
+   display: block;
+   border-radius: 10px;
+   border: solid 1px rgba(200,0,0,0.5);
 }
 
 #selectionsDiv div{
   display: inline-block;
 }
 
+#selectionsDiv input{
+  display: block;
+}
+
 #selectionsDiv label{
+  display: block;
   font-size: 10px;
 }
 
