--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -138,8 +138,9 @@ body {
 }
 
 #tab_intro{
-  font-size: 50px;
+  font-size: 20px;
   cursor: pointer;
+  z-index: 100;
 }
 
 .icon-link{ 
@@ -185,29 +186,12 @@ body {
   color: rgba(100, 0, 0, 0.4);
 }
 
-/*
-#tab_chart {
-   display: flex;   
-   overflow-y: scroll;
-   flex-direction: column;
-   align-items: center;
-}
-*/
-
 .chart_panel {
    position: absolute;
    display: block;
    width: 100%;
    height: 75%;
 }
-
-.performanceChart{
-   /*font-family: "Varela", sans-serif;
-   font-size: 12px;
-   padding:10px;
-   padding-top: 4px;*/
-}
-
 
 #loading-circle {
     position: absolute;
