--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -141,6 +141,26 @@ body {
   font-size: 20px;
   cursor: pointer;
   z-index: 100;
+  color: rgba(200, 0, 0, 0.3);
+}
+
+.pulse{ 
+   animation: pulsate 1.5s linear infinite;
+}
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1.0);
+    filter: hue-rotate(0deg);
+  }
+  50% {
+    transform: scale(0.95);
+    filter: hue-rotate(360deg);
+  }
+  100% {
+    transform: scale(1.0);
+    filter: hue-rotate(0deg);
+  }
 }
 
 .icon-link{ 
@@ -532,24 +552,4 @@ section{
   border: solid 1px;
   border-radius: 10px;
   padding: 4px;
-}
-
-
-.pulse{ 
-   animation: pulsate 2.5s ease-out infinity;
-}
-
-@keyframes pulsate {
-  0% {
-    transform: scale(1.0);
-    filter: hue-rotate(0deg);
-  }
-  50% {
-    transform: scale(0.9);
-    filter: hue-rotate(360deg);
-  }
-  100% {
-    transform: scale(1.0);
-    filter: hue-rotate(0deg);
-  }
 }
