--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -110,7 +110,7 @@ body {
 #stats_head {
   text-align: center;
   width: 100%;
-  height: 50px;
+  height: 68px;
   box-sizing: border-box;
   display: block;
   background-color: rgba(200,0,0,0.2);
@@ -120,7 +120,7 @@ body {
 #stats_footer {
   text-align: center;
   width: 100%;
-  height: 40px;
+  height: 54px;
   box-sizing: border-box;
   display: block;
   background-color: rgba(200,0,0,0.2);
@@ -130,6 +130,9 @@ body {
 #tabs {
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
+  position: relative;
+  display: block;
 }
 
 .tab {
@@ -140,32 +143,40 @@ body {
   box-sizing: border-box;
   display: flex;
   justify-content: center;
-  flex: 1;
+  /*! flex: 1; */
 }
 
 #tab_intro{
-  font-size: 20px;
   cursor: pointer;
   z-index: 100;
   color: rgba(200, 0, 0, 0.3);
+  flex-direction: column;
 }
 
 .pulse{ 
-   animation: pulsate 1.5s linear infinite;
+   animation: pulsate 0.2s ease-in-out infinite;
+   height: 100px;
+   display: block;
+   width: 100%;
+   font-size: 60px;
+   font-weight: bolder;
 }
 
 @keyframes pulsate {
   0% {
-    transform: scale(1.0);
-    filter: hue-rotate(0deg);
+    transform: scale(1.0) skewX(0deg);
+  }
+  25% {
+    transform: scale(0.995) skewX(20deg);
   }
   50% {
-    transform: scale(0.95);
-    filter: hue-rotate(360deg);
+    transform: scale(0.995) skewX(0deg);
+  }
+  75% {
+    transform: scale(0.995) skewX(-20deg);
   }
   100% {
-    transform: scale(1.0);
-    filter: hue-rotate(0deg);
+    transform: scale(1.0) skewX(0deg);
   }
 }
 
