--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -143,7 +143,6 @@ body {
   box-sizing: border-box;
   display: flex;
   justify-content: center;
-  /*! flex: 1; */
 }
 
 #tab_intro{
@@ -155,12 +154,13 @@ body {
 }
 
 .pulse{ 
-   height: 100px;
-   display: flex;
-   width: 300px;
+   width: 400px;
    font-size: 30px;
    font-weight: bolder;
-   text-align: center;
+   border: 1px solid rgba(200,0,0,0.2);
+   border-radius: 10px;
+   background-color: white;
+   box-shadow: 2px 2px 2px;
 }
 
 .pulse:hover{
@@ -169,25 +169,26 @@ body {
 
 @keyframes pulsate {
   0% {
-    opacity: 0.45;
+    opacity: 0.75;
     transform: scale(1.0) skewX(0deg);
   }
   35% {
-    opacity: 0.5;
-    transform: scale(0.998) skewX(20deg);
+    opacity: 0.8;
+    transform: scale(0.998) skewX(1deg);
   }
   50% {
-    filter: saturate(80%);
-    opacity: 0.5;
+    background-color: rgba(200,0,0,0.02);
+    filter: saturate(90%) hue-rotate(360deg);
+    opacity: 0.8;
     transform: scale(0.99) skewX(0deg);
-    letter-spacing: 4px
+    letter-spacing: 1px
   }
   65% {
-    opacity: 0.5;
-    transform: scale(0.998) skewX(-20deg);
+    opacity: 0.8;
+    transform: scale(0.998) skewX(-1deg);
   }
   100% {
-    opacity: 0.45;
+    opacity: 0.75;
     transform: scale(1.0) skewX(0deg);
   }
 }
