--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -194,24 +194,29 @@ body {
 }
 
 .fade_hide{
-   animation: fade_hide 1.4s ease-out forward;
+   animation: fade_hide 3.0s ease-out forwards;
 }
 
 @keyframes fade_hide {
   0% {
      opacity: 1.0;
+     transform: translateX(0px);
   }
   25% {
-     transform: translateY(-20px);
+     opacity: 1.0;
+     transform: translateX(-20px);
   }
   50% {
-     
+     opacity: 1.0;
+     transform: translateX(0px);
   }
   75% {
-     transform: translateY(200px);
+     opacity: 0.5;
+     transform: translateX(100px);
   }
   100% {
       opacity: 0;
+      transform: translateX(200px);
       display: none;
   }
 }
