--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -152,6 +152,7 @@ body {
   color: rgba(200, 0, 0, 0.3);
   flex-direction: column;
   align-items: center;
+  background-color: #FDDDE6;
 }
 
 .pulse{ 
