--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -147,6 +147,14 @@ body {
 }
 
 #tab_intro{
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+
   cursor: pointer;
   z-index: 100;
   color: rgba(200, 0, 0, 0.3);
