--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -322,7 +322,7 @@ body {
 #loading_info {
     position: absolute;
     left: 50%;
-    bottom: 2px;
+    bottom: 4px;
     font-size: 10px;
     display: flex;
     justify-content: center;
@@ -340,7 +340,7 @@ body {
 #loading {
     position: absolute;
     left: 50%;
-    bottom: 8px;
+    bottom: 12px;
     transform: translateX(-50%);
 }
 
@@ -408,6 +408,7 @@ select {
 }
 
 input[type="checkbox"] {
+   cursor: pointer;
    filter: hue-rotate(125deg) saturate(70%);
 }
 
