--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -33,12 +33,10 @@ body {
 #root {
   display: block;
   width: 100%;
-  height: 90%;
-  /*! background-color: #FDDDE6; */
+  height: 650px;
   padding: 20px;
-  position: absolute;
-  box-sizing: border-box;
   position: relative;
+  box-sizing: border-box;
 }
 
 h2{
@@ -69,6 +67,7 @@ pre{
   justify-content: center;
   margin-top: 2px;
   flex-direction: column;
+  width: 70%;
 }
 
 code{
@@ -80,10 +79,11 @@ code{
   color: white;
   text-align: left;
   padding: 10px;
-  width: 600px;
+  width: 100%;
   white-space: pre-line;
   padding-top: 0px;
   user-select: text;
+  box-sizing: border-box;
 }
 
 .anchor{
@@ -623,14 +623,15 @@ section{
     margin: 0px;
     padding: 0px;
 
-    min-height:100%;
+    min-height:700px;
     display: flex;
     flex-direction: column;
     transition: background-color 0.5s ease; /* Smooth background color transition */
+    position: relative;
 }
 
 #section_main{
-    justify-content: center;
+    /*! justify-content: center; */
 }
 
 #section_usage{
@@ -652,6 +653,8 @@ section{
   width: 100%;
   text-align: center;
   height: 40px;
+  position: relative;
+  display: block;
 }
 
 .anchor {
