--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -652,16 +652,24 @@ section{
 #examples {
    width: 100%;
    text-align: center;
+   height: 50px;
 }
 
 #examples a{
-  display: inline;
+  display: inline-block;
   margin: 10px;
-  text-decoration: none;
-  color: white;
+  padding:3px;
   font-weight: bold;
   border: 1px solid white;
-  border-radius: 5px;
+  border-radius: 5px; 
+  color: white;
+  font-size: 15px;
+  background-color: rgba(200,140,160);
+}
+
+#examples a:hover{
+  filter:saturate(150%);
+  box-shadow: 0px 0px 4px white;
 }
 
 #anchors{
