--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -39,6 +39,11 @@ body {
   box-sizing: border-box;
 }
 
+#section_usage p{
+  margin: 0px;
+  font-size: 12px
+}
+
 #section_usage h2{
   margin: 0px;
   font-size: 40px
@@ -48,17 +53,22 @@ body {
   margin: 0px;
   font-size: 20px;
   border-top: 1px solid white;
-  width: 70%;
+  width: 85%;
   border-bottom: 1px solid white;
   height: 40px;
   background: linear-gradient(to right, transparent, grey, transparent);
   color: white;
 }
 
-p {
+#section_intro p {
   margin: 0px;
   font-size: 15px;
   margin-top: 5px;
+}
+
+#section_usage p{
+  width: 75%;
+  margin-bottom: 10px;
 }
 
 pre{
@@ -67,7 +77,7 @@ pre{
   justify-content: center;
   margin-top: 2px;
   flex-direction: column;
-  width: 70%;
+  width: 85%;
 }
 
 code{
@@ -638,11 +648,11 @@ section{
     padding-top: 20px;
     text-align: center;
 
-    font-family: "Sue Ellen Francisco", cursive !important;
     font-style: normal;
     color: #FDDDE6;
     align-items: center;
     height: fit-content;
+    width: 100%;
 }
 
 .comment {
@@ -693,7 +703,8 @@ section{
   padding: 30px;
   box-sizing: border-box;
   color: white;
-  max-width: 600px;
+  max-width: 400px;
+  height: 100%;
 }
 
 #section_intro h1{
@@ -724,4 +735,10 @@ section{
 
 #section_intro li{
   font-size:13px;
+}
+
+.split_section{
+  display: flex;
+  flex-direction: row;
+  height: 100%;
 }
