--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -55,7 +55,7 @@ body {
   border-top: 1px solid white;
   width: 85%;
   border-bottom: 1px solid white;
-  height: 40px;
+  height: 28px;
   background: linear-gradient(to right, transparent, grey, transparent);
   color: white;
 }
@@ -651,8 +651,10 @@ section{
     font-style: normal;
     color: #FDDDE6;
     align-items: center;
-    height: fit-content;
+    /*! height: fit-content; */
     width: 100%;
+    height: 100%;
+    box-sizing: border-box;
 }
 
 .comment {
@@ -741,4 +743,22 @@ section{
   display: flex;
   flex-direction: row;
   height: 100%;
+}
+
+#h_1, #h_2, #h_3{
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+#d_1, #d_2, #d_3{
+  animation: blend_in 0.5s ease forwards;
+}
+
+@keyframes blend_in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
