--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -28,6 +28,7 @@ body {
   overflow-y: scroll;
   background-color: #FDDDE6;
   overflow-x: hidden;
+  box-sizing: border-box;
 }
 
 #root {
@@ -53,7 +54,7 @@ body {
   margin: 0px;
   font-size: 20px;
   border-top: 1px solid white;
-  width: 85%;
+  width: 90%;
   border-bottom: 1px solid white;
   height: 28px;
   background: linear-gradient(to right, transparent, grey, transparent);
@@ -67,7 +68,7 @@ body {
 }
 
 #section_usage p{
-  width: 75%;
+  width: 90%;
   margin-bottom: 10px;
 }
 
@@ -77,7 +78,7 @@ pre{
   justify-content: center;
   margin-top: 2px;
   flex-direction: column;
-  width: 85%;
+  width: 90%;
 }
 
 code{
@@ -651,7 +652,6 @@ section{
     font-style: normal;
     color: #FDDDE6;
     align-items: center;
-    /*! height: fit-content; */
     width: 100%;
     height: 100%;
     box-sizing: border-box;
@@ -702,10 +702,10 @@ section{
 }
 
 #section_intro{
-  padding: 30px;
+  padding: 10px;
   box-sizing: border-box;
   color: white;
-  max-width: 400px;
+  max-width: 320px;
   height: 100%;
 }
 
@@ -743,6 +743,9 @@ section{
   display: flex;
   flex-direction: row;
   height: 100%;
+  padding: 0px;
+  box-sizing: border-box;
+  margin: 0px;
 }
 
 #h_1, #h_2, #h_3{
@@ -764,5 +767,15 @@ section{
   }
   to {
     opacity: 1;
+  }
+}
+
+/* Responsive behavior for smaller screens */
+@media screen and (max-width: 850px) {
+    .split_section {
+        flex-direction: column;
+    }
+  #section_intro, #section_usage{
+    max-width: 100%;
   }
 }
