--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -820,3 +820,8 @@ section{
 body > section, .split_section {
   min-height: 1000px!important;
 }
+
+/* Hide scrollbar for webkit browsers */
+body::-webkit-scrollbar {
+    width: 0;
+}
