--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -804,6 +804,7 @@ section{
   align-items: center;
   justify-content: center;
   z-index: 2000;
+  border-top: 1px solid white;
 }
 
 .current_anchor{
