--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -831,19 +831,22 @@ body > section, .split_section {
 
 .giphy-round {
     position: absolute;
-    right: 100px;
-    top: 100px;
-    width: 200px; /* Adjust the width and height as needed */
-    height: 200px;
+    transform: translateX(120%);
+    left: 50%;
+    top: 50px;
+    width: 150px; /* Adjust the width and height as needed */
+    height: 150px;
     overflow: hidden;
     border-radius: 50%; /* Ensure the container is also round */
+    display: flex;
+    align-items: center;
+    background-color: white;
+    filter: brightness(150%) saturate(170%);
 }
 
 .giphy-round iframe {
-    width: 100%; /* Ensure the iframe fills the container */
-    height: 100%;
+    width: 400px; /* Ensure the iframe fills the container */
+    height: 400px;
     border: none; /* Remove default border */
-    border-radius: 50%; /* Apply circular clipping to the iframe */
 }
-
 
