--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -830,7 +830,9 @@ body > section, .split_section {
 }
 
 .giphy-round {
+    visibility: hidden;
     display: none;
+
     position: absolute;
     transform: translateX(120%);
     left: 50%;
