--- a/oink_fft/css/about.css
+++ b/oink_fft/css/about.css
@@ -1,21 +1,38 @@
-#profile_div p {
-    line-height: 14px;
-    margin: 0px;
-    text-align: justify;
-}
-
-#header {
-    width: 90%;
+#about {
+    margin: 20px;
+    width: 75%;
+    height: 300px;
     border-radius: 6px;
+    margin-inline: auto;
+    background-color: rgba(10,10,10,0.9);
+    padding: 20px;
 }
 
-#header_row {
+
+
+
+#dev {
+    margin: 20px;
+    width: 75%;
+    border-radius: 6px;
+    margin-inline: auto;
+    background-color: rgba(10,10,10,0.9);
+    padding: 20px;
+}
+
+#dev_row {
     display: flex;
     flex-direction: row;
 }
 
-.header_row_item {
+.dev_row_item {
+    color: white;
+    margin-top: 10px;
     margin-right: 20px;
+}
+
+.dev_row_item h1 {
+    margin: 0px;
 }
 
 .info {
@@ -27,9 +44,15 @@
     display: flex;
     flex-direction: row;
     width: 400px;
-    border-right: 1px solid black;
+    border-right: 1px solid white;
     padding-right: 20px;
-    filter: drop-shadow(1px 1px 10px rgba(0,0,0,0.5));
+    filter: drop-shadow(1px 1px 10px rgba(0,0,0,0.2));
+}
+
+#profile_div p {
+    line-height: 14px;
+    margin: 0px;
+    text-align: justify;
 }
 
 #profile {
@@ -42,11 +65,19 @@
 .links {
     width: 30px;
     height: 30px;
-    mix-blend-mode: multiply;
+    mix-blend-mode: difference;
     cursor: pointer;
-    filter: grayscale(100%) drop-shadow(1px 1px 10px rgba(0,0,0,0.5));
+    filter: grayscale(100%) invert(100%) drop-shadow(0px 0px 2px rgba(200,200,200,0.9));
 }
 
 a {
     text-decoration: none;
+}
+
+#donate-button-container{
+    filter: invert(100%) hue-rotate(95deg) saturate(40%) brightness(150%);
+}
+
+#coffee-button-container{
+    filter: hue-rotate(300deg);
 }
