--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -873,3 +873,13 @@ body > section, .split_section {
     border: none; /* Remove default border */
 }
 
+
+#imprint {
+    width: 100%;
+    text-align: center;
+    padding-bottom: 100px;
+    padding-top: 40px;
+    background-color: black;
+    color: rgba(200,30,30,0.5);
+}
+
