--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -869,7 +869,7 @@ body > section, .split_section {
     border: none; /* Remove default border */
 }
 
-#section_about{
+#section_about > h1 {
   text-align: center;
   font-size: 48px;
   margin: 0px;
@@ -877,7 +877,7 @@ body > section, .split_section {
 }
 
 #about {
-    margin: 20px;
+    margin: 0px;
     width: 75%;
     height: 150px;
     border-radius: 6px;
