--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -888,6 +888,7 @@ body > section, .split_section {
     margin-inline: auto;
     background-color: rgba(10,10,10,0.9);
     padding: 20px;
+    color: white;
 }
 
 
