--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -809,7 +809,7 @@ section{
   }
 
   #section_about{
-    min-height: 920px;  
+    min-height: 1100px;  
   }
 }
 
@@ -883,12 +883,14 @@ body > section, .split_section {
 #about {
     margin: 0px;
     width: 75%;
-    height: 140px;
+    height: fit-content;
     border-radius: 6px;
     margin-inline: auto;
     background-color: rgba(10,10,10,0.9);
     padding: 20px;
     color: white;
+    font-size: 13px;
+    min-width: 400px;
 }
 
 
