--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -108,9 +108,12 @@ code{
 }
 
 #title_div {
-  text-align: center;
-  height: 100px;
+  position: relative;
+  height: 200px;
   filter: drop-shadow(4px 4px 4px rgba(0,0,0,0.2));
+  left: 50%;
+  transform: translateX(-50%);
+  width: fit-content;
 }
 
 #title {
@@ -543,7 +546,7 @@ input[type="checkbox"] {
    position: absolute;
    width: 30px;
    height: 30px;
-   top: 90%;
+   top: 50%;
    left: 10%;
    transform: translate(-20%, 50%);
 
