--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -142,9 +142,9 @@ code{
 }
 
 #descr_div {
-  position: absolute;
+  position: relative;
   font-family: "Sue Ellen Francisco", cursive !important;
-  top: 400px;
+  margin-top: 40px;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
