--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -810,10 +810,6 @@ section{
   #section_intro, #section_usage{
     max-width: 100%;
   }
-
-  #selectionsDiv {
-    transform: scale(0.8) translateX(-40px);
-  }
 }
 
 #footer{
@@ -922,3 +918,16 @@ body > section, .split_section {
    color: black;
    font-size: 10px;
 }
+
+
+  #selectionsDiv.mobile {
+    transform: scale(0.8) translateX(-40px);
+  }
+
+  #icon-row.mobile {
+    transform: scale(0.8) translateX(40px);
+  }
+
+  #paramsDiv.mobile {
+    transform: scale(0.8) translateX(40px);
+  }
