--- a/oink_fft/css/about.css
+++ b/oink_fft/css/about.css
@@ -83,9 +83,9 @@ a {
 }
 
 #about.mobile {
-    min-width: none!important;
+    min-width: unset!important;
 }
 
 #dev.mobile {
-    min-width: none!important;
+    min-width: unset!important;
 }
