--- a/oink_fft/css/about.css
+++ b/oink_fft/css/about.css
@@ -44,9 +44,10 @@
     display: flex;
     flex-direction: row;
     width: 400px;
-    /*! border-right: 1px solid white; */
+    max-width: 100%;
     padding-right: 20px;
     filter: drop-shadow(1px 1px 10px rgba(0,0,0,0.2));
+    /*! font-size: 60%; */
 }
 
 #profile_div p {
@@ -60,6 +61,8 @@
     height: 200px; 
     width: 200px;
     border: 1px solid white;
+    max-width: 30vw;
+    max-height: 30vw;
 }
 
 .links {
