--- a/oink_fft/css/about.css
+++ b/oink_fft/css/about.css
@@ -44,10 +44,9 @@
     display: flex;
     flex-direction: row;
     width: 400px;
-    max-width: 100%;
+    max-width: 75vw;
     padding-right: 20px;
     filter: drop-shadow(1px 1px 10px rgba(0,0,0,0.2));
-    /*! font-size: 60%; */
 }
 
 #profile_div p {
