--- a/oink_fft/css/theme.css
+++ b/oink_fft/css/theme.css
@@ -664,7 +664,7 @@ section.mobile {
 }
 
 #section_main{
-    max-height: 700px;
+    height: 100vh;
 }
 
 #section_usage{
@@ -675,7 +675,7 @@ section.mobile {
     color: #FDDDE6;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     box-sizing: border-box;
     min-height: 800px;
 }
@@ -733,7 +733,7 @@ section.mobile {
   color: white;
   max-width: 320px;
   min-height: 800px;
-  height: 100%;
+  height: 100vh;
 }
 
 #section_intro h1{
@@ -800,7 +800,8 @@ section.mobile {
 }
 
 #section_about{
-   min-height: 1100px;  
+   min-height: 1100px; 
+   height: 100vh; 
 }
 
 /* Responsive behavior for smaller screens */
